# aoc-2016

./: CMakeLists.txt  README.md
inputs/: 4.txt
src/: 01.cpp  04.cpp  05.cpp  06.cpp  07.cpp  1.cpp  10.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt
test/: 3.sample  7.sample5
